-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.5, 6.6.1, 6.6.3, 6.7.0 RC2
-
-
f7982d009 (dev), 317dd085d (122-based), 668b77946 (118-based), 692934919 (6.7), 8c0d22228 (134-based-refactor)
A large number of warnings such as the following are output when exiting QWebEngineView
D3D11 WARNING: Live Object at 0x00000295BC9DCC10, Refcount: 0. [ STATE_CREATION WARNING #0: UNKNOWN]
1. Run PrintMe Example or Simple Browser Example from Qt Creator in Debug mode.
2. Press the close button in the top right corner to exit.
| For Gerrit Dashboard: QTBUG-123790 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 556301,5 | Shut GL down on process exit to silence Direct3D11 warnings | 122-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 556342,3 | Properly release COM interfaces to silence Direct3D11 warnings | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 582775,3 | Update Chromium | 6.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 582812,2 | Shut GL down on process exit to silence Direct3D11 warnings | 118-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |