Shut GL down on process exit to silence Direct3D11 warnings

When using Direct3D11 as RHI backed, exiting the process will
trigger a huge amount of warnings about live Direct3D objects.
These happen because Chromium never actually shuts down its GL
implementation, which in turn doesn't destroy the underlying Direct3D11
device that ANGLE runs on top of. This behavior can also be observed in
upstream Chromium when running with --in-process-gpu.

This change adds a call to ShutdownGL() inside GpuInit's destructor,
which makes sure the implementation is properly destroyed, along with
all its leftover live objects.

Task-number: QTBUG-123790
Pick-to: 118-based
Change-Id: I0641cfae57aa31fea1984d79b2aa9fa636330f1d
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/556301
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>